Fixed alignment on title text in mobile

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@ table td {
     background-color: #F6F1E9;
 }
 
+header {
+    justify-content: center;
+}
+
 header #social {
     display: none;
 }
